--- a/frontend/src/app/home/components/searchbar/searchbar.html
+++ b/frontend/src/app/home/components/searchbar/searchbar.html
@@ -1,6 +1,22 @@
 <div class="search-bar">
-    <input [formControl]="searchControl" placeholder="search by username..." required>
-    <div class="users" *ngFor="let user of searchData">
-        <ul (click)="goToProfile(user.uuid)">{{ user.username }}</ul>
+    <div class="search-input-wrapper">
+        <input
+            [formControl]="searchControl"
+            placeholder="Search for people..."
+            class="search-input"
+            required>
+        <div class="search-underline"></div>
+    </div>
+    <div class="search-results" *ngIf="searchData.length > 0">
+        <div class="results-header">
+            <span class="results-count">{{ searchData.length }} {{ searchData.length === 1 ? 'person' : 'people' }} found</span>
+        </div>
+        <div class="user-result" *ngFor="let user of searchData" (click)="goToProfile(user.uuid)">
+            <img [src]="'http://localhost:8080/' + user.profileImagePath" [alt]="user.username" class="user-avatar">
+            <div class="user-info">
+                <p class="user-name">{{ user.firstName }} {{ user.lastName }}</p>
+                <p class="user-username">@{{ user.username }}</p>
+            </div>
+        </div>
     </div>
 </div>
