--- a/frontend/src/app/me/components/me.html
+++ b/frontend/src/app/me/components/me.html
@@ -39,15 +39,21 @@
             </div>
         </div>
         <form (ngSubmit)="onCreatePost()" class="create-post-form">
-            <div class="form-group">
-                <label for="post-title">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                        <path d="M2 13c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q9.291 9.087 9 9c5 0 6 3 6 4s-1 1-1 1zM12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
-                    </svg>
-                    Title
-                </label>
-                <input id="post-title" [(ngModel)]="post.title" name="title" placeholder="Give your post a catchy title..." required>
+            <div class="form-group title-group">
+                <div class="title-input-wrapper">
+                    <input
+                        id="post-title"
+                        [(ngModel)]="post.title"
+                        name="title"
+                        type="text"
+                        class="title-input"
+                        placeholder="Enter your story title..."
+                        required>
+                    <div class="title-underline"></div>
+                </div>
+                <div class="title-hint">
+                    <span class="char-count">{{ (post.title?.length || 0) }}/100</span>
+                </div>
             </div>
             <div class="form-group">
                 <label for="post-content">
