--- a/frontend/src/app/me/components/me.html
+++ b/frontend/src/app/me/components/me.html
@@ -52,7 +52,7 @@
                     <div class="title-underline"></div>
                 </div>
                 <div class="title-hint">
-                    <span class="char-count">{{ (post.title?.length || 0) }}/100</span>
+                    <span class="char-count">{{ (post.title.length || 0) }}/100</span>
                 </div>
             </div>
             <div class="form-group">
