--- a/frontend/src/app/searchbar/searchbar.html
+++ b/frontend/src/app/searchbar/searchbar.html
@@ -3,6 +3,7 @@
         <input
             [formControl]="searchControl"
             placeholder="Search for people..."
+            maxlength="10"
             class="search-input"
             required>
         <div class="search-underline"></div>
